[REFACTOR] fix issue on sonarqube